fix: wrap headers in links and adjust header icons styles (#9303)
* fix: wrap headers in links and adjust header icons styles

* fix: make header icons consistent

--- a/src/styles/_includes/type.scss
+++ b/src/styles/_includes/type.scss
@@ -10,6 +10,13 @@
     &:hover .anchor {
       opacity: 1;
     }
+    a {
+      color: $darkPurple;
+      text-decoration: none;
+    }
+    code {
+      color: $codeColor;
+    }
   }
 
   h2:not(:first-child) {
@@ -29,30 +36,14 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 0;
-    bottom: 0;
     width: $anchor-size;
-    margin-left: -$anchor-size;
+    max-height: 70%;
+    top: 50%;
+    transform: translate(-100%, -50%);
+    color: $brandPink;
 
     opacity: 0;
     transition: opacity 150ms linear;
-
-    // Visual alignment
-    transform: translateY(-1px);
-
-    // overload for gatsby-remark-autolink-headers
-    padding: 0;
-
-    &:hover {
-      text-decoration: none;
-      opacity: 1;
-    }
-
-    svg {
-      display: block;
-      width: $icon-size;
-      height: $icon-size;
-    }
   }
 
   // only used for gifs. Other images are overridden by gatsby-remark-images
